--- a/homework/homework/winAddDepart.xaml
+++ b/homework/homework/winAddDepart.xaml
@@ -9,7 +9,7 @@
     <Grid>
         <TextBox x:Name="txtName" HorizontalAlignment="Left" Height="20" Margin="10,29,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="250"/>
         <TextBlock HorizontalAlignment="Left" Margin="10,11,0,0" TextWrapping="Wrap" Text="Название отдела:" VerticalAlignment="Top"/>
-        <Button x:Name="btnOk" Content="Добавить" HorizontalAlignment="Left" Margin="95,55,0,0" VerticalAlignment="Top" Width="75"/>
+        <Button x:Name="btnOk" Content="Добавить" HorizontalAlignment="Left" Margin="95,55,0,0" VerticalAlignment="Top" Width="75" Click="btnOk_Click"/>
         <Button x:Name="btnCancel" Content="Отмена" HorizontalAlignment="Left" Margin="185,55,0,0" VerticalAlignment="Top" Width="75"/>
 
     </Grid>
